Fix alignment of light/dark mode

--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -65,6 +65,7 @@
 .header-controls {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 0.5rem;
 }
 
